src/objects/Certification_Attempt__c.object
<CustomObject>
    <description>Used to track each time a contact attempts a certification.</description>
    <fields>
        <fullName>Attempt_Date__c</fullName>
        <description>Date a candidate tries to pass a Multiple Choice certification element.</description>
        <label>Attempt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Certification Candidate</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certification Attempts</relationshipLabel>
        <relationshipName>Certification_Attempts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Element__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Certification element for this attempt</description>
        <label>Certification Element</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Multiple Choice</value>
            </filterItems>
            <filterItems>
                <field>Certification_Element__c.Type__c</field>
                <operation>equals</operation>
                <value>Multiple Choice</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab</value>
            </filterItems>
            <filterItems>
                <field>Certification_Element__c.Type__c</field>
                <operation>equals</operation>
                <value>Lab</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Certification_Element__c</referenceTo>
        <relationshipLabel>Certification Attempts</relationshipLabel>
        <relationshipName>Certification_Attempts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certifying_Instructor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Instructor who certifies candidate.</description>
        <label>Certifying Instructor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Is_Instructor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Certification_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <description>Date a candidate completed a Lab certification element.</description>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Date a candidate starts a Lab certification element.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of a certification attempt.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete/Pass</fullName>
                </value>
                <value>
                    <fullName>Complete/Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Certification Attempt</label>
    <nameField>
        <displayFormat>ATTEMPT-{00000}</displayFormat>
        <label>Certification Attempt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Attempts</pluralLabel>
    <recordTypes>
        <fullName>Lab</fullName>
        <active>true</active>
        <description>Use to create a lab certification attempt.</description>
        <label>Lab</label>
    </recordTypes>
    <recordTypes>
        <fullName>Multiple_Choice</fullName>
        <active>true</active>
        <description>Use to create a multiple choice certification attempt.</description>
        <label>Multiple Choice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Certifying_Instructor__c</fullName>
        <label>Certifying Instructor</label>
    </sharingReasons>
</CustomObject>